--- a/About.html
+++ b/About.html
@@ -3,12 +3,12 @@
     <title></title>
   </head>
   <body>
-    <link href='./stylesheetabout.css' rel='stylesheet' type='text/css'>
+    <link href='./docs/stylesheetabout.css' rel='stylesheet' type='text/css'>
     <div class="navbar">
         <ul class="navbar-container">
-          <li class="nav-item"><a href="./Contact.html" class="left-underline nav-button" data-scroll>Contact</a></li>
-          <li class="nav-item"><a href="./About.html" class="left-underline nav-button" data-scroll>About</a></li>
-          <li class="nav-item active"><a href="/homepage.html" class="left-underline nav-button" data-scroll>Home</a></li>
+          <li class="nav-item"><a href="./docs/Contact.html" class="left-underline nav-button" data-scroll>Contact</a></li>
+          <li class="nav-item"><a href="./docs/About.html" class="left-underline nav-button" data-scroll>About</a></li>
+          <li class="nav-item active"><a href="./docs/homepage.html" class="left-underline nav-button" data-scroll>Home</a></li>
         </ul>
       </div>
 <div class="about-section">
@@ -25,7 +25,7 @@
   <div class="row">
     <div class="column">
       <div class="card">
-        <img src="./20191004_191231.jpg" alt="Jane" style="width:100%">
+        <img src="./docs/20191004_191231.jpg" alt="Jane" style="width:100%">
         <div class="container">
           <h2>Jane Doe</h2>
           <p class="title">CEO & Founder</p>
@@ -37,7 +37,7 @@
   
     <div class="column">
       <div class="card">
-        <img src="./20191004_191728.jpg" alt="Mike" style="width:100%">
+        <img src="./docs/20191004_191728.jpg" alt="Mike" style="width:100%">
         <div class="container">
           <h2>Mike Ross</h2>
           <p class="title">Art Director</p>
@@ -49,7 +49,7 @@
   
     <div class="column">
       <div class="card">
-        <img src="./20191004_192331.jpg" alt="John" style="width:100%">
+        <img src="./docs/20191004_192331.jpg" alt="John" style="width:100%">
         <div class="container">
           <h2>John Doe</h2>
           <p class="title">Designer</p>
