--- a/Contact.html
+++ b/Contact.html
@@ -3,12 +3,12 @@
     <title></title>
   </head>
   <body>
-    <link href='./stylesheetcontact.css' rel='stylesheet' type='text/css'>
+    <link href='./docs/stylesheetcontact.css' rel='stylesheet' type='text/css'>
     <div class="navbar">
       <ul class="navbar-container">
-        <li class="nav-item"><a href="./Contact.html" class="left-underline nav-button" data-scroll>Contact</a></li>
-        <li class="nav-item"><a href="./About.html" class="left-underline nav-button" data-scroll>About</a></li>
-        <li class="nav-item active"><a href="./homepage.html" class="left-underline nav-button" data-scroll>Home</a></li>
+        <li class="nav-item"><a href="./docs/Contact.html" class="left-underline nav-button" data-scroll>Contact</a></li>
+        <li class="nav-item"><a href="./docs/About.html" class="left-underline nav-button" data-scroll>About</a></li>
+        <li class="nav-item active"><a href="./docs/homepage.html" class="left-underline nav-button" data-scroll>Home</a></li>
       </ul>
     </div>
 <div class="container">
@@ -24,9 +24,9 @@
           <input type="text" id="lname" name="lastname" placeholder="Your last name..">
           <label for="country">Country</label>
           <select id="country" name="country">
-            <option value="australia">Australia</option>
-            <option value="canada">Canada</option>
-            <option value="usa">USA</option>
+            <option value="australia">Zimbabwe</option>
+            <option value="canada">South Africa</option>
+            <option value="usa">Zambia</option>
           </select>
           <label for="subject">Subject</label>
           <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
